# amethyst

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  DEV.md  README.md  amethyst-moon  build.rs
.github/workflows/: release.yml  test.yml
code/: abc.myst  add.myst  comp.myst  demo.myst  example.myst  hello.myst  macros.myst  not.myst  regular.myst  simple.myst
config/: example.txt
examples-linking-rust-and-haskell/boxes/: build.rs
examples-linking-rust-and-haskell/dyn_list/: Cargo.toml  build.rs
examples-linking-rust-and-haskell/expr_as_enum/: Cargo.toml  build.rs
examples-linking-rust-and-haskell/expr_as_string/: Cargo.toml  build.rs
examples-linking-rust-and-haskell/int_list/: Cargo.toml  build.rs
examples-linking-rust-and-haskell/reverse_string/: .gitignore  build.rs
examples-linking-rust-and-haskell/shape_expr/: Cargo.toml  build.rs
examples-linking-rust-and-haskell/triple/: Cargo.toml  build.rs
extensions/amethyst-moon/: CHANGELOG.md  README.md  amethyst-moon-0.0.1.vsix  amethyst-moon-0.0.2.vsix  amethyst-moon-0.0.3.vsix  package-lock.json  package.json  vsc-extension-quickstart.md
extensions/amethyst-sun/: README.md  (+4 more)
src/: AdvancedParser.hs  AmethystParser.hs  AmethystSyntax.hs  BasicParser.hs  ParserFFI.hs  ParserTests.hs  SyntaxExamples.hs  advanced_parser.rs  ast.rs  basic_parser.rs  config.rs  ffi.rs  ffi_tests.rs  info.rs  interpreter.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  parser_api.c  syntax.rs  tape.rs  token.rs  turing.rs
tests/: advanced_parser_tests.rs  basic_parser_tests.rs  integration_tests.rs  parser_tests.rs
(+59 files in other folders)
